<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  This file is part of AntMonitor <https://athinagroup.eng.uci.edu/projects/antmonitor/>.
  ~  Copyright (C) 2018 Anastasia Shuba and the UCI Networking Group
  ~  <https://athinagroup.eng.uci.edu>, University of California, Irvine.
  ~
  ~  AntMonitor is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, version 2 of the License.
  ~
  ~  AntMonitor is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with AntMonitor. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contribute_level"
        android:layout_marginBottom="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption.2" />

    <include layout="@layout/horizontal_line_3"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checkedButton="@+id/med_contribute"
        android:id="@+id/contribute_group"
        android:orientation="vertical">

        <RadioButton
            android:text="@string/contribute_level_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/low_contribute"
            android:paddingLeft="10dp" />

        <TextView
            android:text="@string/contribute_level_low_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="-6dp"
            android:layout_marginBottom="10dp" />

        <RadioButton
            android:text="@string/contribute_level_med"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/med_contribute"
            android:paddingLeft="10dp" />
        <TextView
            android:text="@string/contribute_level_med_detail"
            android:id="@+id/med_contribute_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="-6dp"
            android:layout_marginBottom="10dp" />

        <RadioButton
            android:text="@string/contribute_level_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/high_contribute"
            android:paddingLeft="10dp" />
        <TextView
            android:text="@string/contribute_level_high_detail"
            android:id="@+id/high_contribute_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="-6dp"
            android:layout_marginBottom="10dp" />
    </RadioGroup>

</LinearLayout>
