<!--
  ~  This file is part of AntMonitor <https://athinagroup.eng.uci.edu/projects/antmonitor/>.
  ~  Copyright (C) 2018 Anastasia Shuba and the UCI Networking Group
  ~  <https://athinagroup.eng.uci.edu>, University of California, Irvine.
  ~
  ~  AntMonitor is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, version 2 of the License.
  ~
  ~  AntMonitor is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with AntMonitor. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WirelessSignalsActivity" >
    <item
        android:title="@string/signalsSettings"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:title="@string/signalsUpload"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:title="@string/signalsStatistics"
        android:orderInCategory="2"
        app:showAsAction="never" />
</menu>
