<!--
  ~  This file is part of AntMonitor <https://athinagroup.eng.uci.edu/projects/antmonitor/>.
  ~  Copyright (C) 2018 Anastasia Shuba and the UCI Networking Group
  ~  <https://athinagroup.eng.uci.edu>, University of California, Irvine.
  ~
  ~  AntMonitor is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~  AntMonitor is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with AntMonitor. If not, see <http://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uci.calit2.anteater.client.android.fragment.GSMainAboutFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/getting_started_header_height"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_launcher_web"
                android:scaleType="fitCenter"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:text="@string/app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/accent"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="@string/getting_started"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/getting_started_textView"
                    android:layout_marginLeft="15dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:text="@string/getting_started_learn_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:id="@+id/learn_more"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:autoLink="web" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="5dp">

                <TextView
                    android:text="@string/getting_started_understand_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption.2"
                    android:textSize="18sp" />
                <TextView
                    android:text="@string/getting_started_understand_device_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/tripit_48"
                android:tint="@color/common_signin_btn_light_text_default" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/getting_started_protect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption.2"
                    android:textSize="18sp" />
                <TextView
                    android:text="@string/getting_started_protect_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/ic_shield_settings"
                android:tint="@color/common_signin_btn_light_text_default" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/getting_started_contribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption.2"
                    android:id="@+id/contribute_logs_title"
                    android:textSize="18sp" />
                <TextView
                    android:text="@string/getting_started_contribute_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:textSize="14sp" />

                <TextView
                    android:text="@string/getting_started_contribute_privacy_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/privacy_terms_link"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="false"
                    android:textStyle="normal|bold"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/ic_cloud_upload_black_24dp"
                android:tint="@color/common_signin_btn_light_text_default" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
