<!--
  ~  This file is part of AntMonitor <https://athinagroup.eng.uci.edu/projects/antmonitor/>.
  ~  Copyright (C) 2018 Anastasia Shuba and the UCI Networking Group
  ~  <https://athinagroup.eng.uci.edu>, University of California, Irvine.
  ~
  ~  AntMonitor is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, version 2 of the License.
  ~
  ~  AntMonitor is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with AntMonitor. If not, see <http://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uci.calit2.anteater.client.android.fragment.ContributeSettingsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_now_detail" />

            <TextView
                android:text="@string/upload_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/upload_now"
                android:textColor="@color/black"
                android:clickable="true"
                android:textIsSelectable="false"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/label_bg"/>

            <include layout="@layout/content_contribution_level"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribute_setting_manage_logs"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption.2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp" />
            <include layout="@layout/horizontal_line_3"/>

            <TextView
                android:text="@string/contribute_setting_select_applications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_applications"
                android:textColor="@color/black"
                android:clickable="true"
                android:textIsSelectable="false"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/label_bg"/>

            <include layout="@layout/horizontal_line_2"/>

            <TextView
                android:text="@string/contribute_privacy_terms"
                android:id="@+id/privacy_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:clickable="true"
                android:textIsSelectable="false"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/label_bg"/>

            <include layout="@layout/horizontal_line_2"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
